--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       retries: 10
   api:
     build:
+      context: ./
       dockerfile: Dockerfile
     image: tpnodejs:latest
     depends_on:
